# personal-ops

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLIENTS.md  CONTRIBUTING.md  Makefile  OPERATIONS.md  QUICK-GUIDE.md  README.md  RELEASING.md  START-HERE.md  UPGRADING.md  bootstrap
app/: package-lock.json  package.json  tsconfig.json
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 2026-03-24-system-audit.md  ASSISTANT-LED-DESKTOP-SUPPORT-CONTRACT.md  ASSISTANT-LED-HISTORY-SUMMARY.md  ASSISTANT-LED-PHASE-10-PLAN.md  ASSISTANT-LED-PHASE-10-ROLLOUT.md  ASSISTANT-LED-PHASE-12-PLAN.md  ASSISTANT-LED-PHASE-12-ROLLOUT.md  ASSISTANT-LED-PHASE-16-ROLLOUT.md  ASSISTANT-LED-PHASE-17-ROLLOUT.md  ASSISTANT-LED-PHASE-18-ROLLOUT.md  ASSISTANT-LED-PHASE-19-PLAN.md  ASSISTANT-LED-PHASE-19-ROLLOUT.md  ASSISTANT-LED-PHASE-2-ROLLOUT.md  ASSISTANT-LED-PHASE-20-ROLLOUT.md  ASSISTANT-LED-PHASE-21-PLAN.md  ASSISTANT-LED-PHASE-22-ROLLOUT.md  ASSISTANT-LED-PHASE-24-ROLLOUT.md  ASSISTANT-LED-PHASE-26-PLAN.md  ASSISTANT-LED-PHASE-26-ROLLOUT.md  ASSISTANT-LED-PHASE-29-ROLLOUT.md  ASSISTANT-LED-PHASE-3-PLAN.md  ASSISTANT-LED-PHASE-3-ROLLOUT.md  ASSISTANT-LED-PHASE-30-PLAN.md  ASSISTANT-LED-PHASE-30-ROLLOUT.md  ASSISTANT-LED-PHASE-32-PLAN.md  ASSISTANT-LED-PHASE-32-ROLLOUT.md  ASSISTANT-LED-PHASE-34-PLAN.md  ASSISTANT-LED-PHASE-35-PLAN.md  ASSISTANT-LED-PHASE-36-AUDIT.md  ASSISTANT-LED-PHASE-37-PLAN.md  ASSISTANT-LED-PHASE-38-PLAN.md  ASSISTANT-LED-ROADMAP.md  (+68 more)
(+224 files in other folders)
