[package]
name = "personal-ops-desktop"
version = "0.1.0"
description = "Native shell for the Personal Ops console"
authors = ["d"]
edition = "2021"

[lib]
name = "personal_ops_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
toml = "0.8"
